<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/image_size"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSize"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="25dp"
        android:text="@string/color_filter"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColor"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="25dp"
        android:text="@string/image_type"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvType"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="25dp"
        android:text="@string/site_filter"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvColor"
        android:ems="10"
        android:hint="@string/none" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/sSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSize"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSize"
        android:layout_toRightOf="@+id/tvSize" />

    <Spinner
        android:id="@+id/sColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvColor"
        android:layout_toRightOf="@+id/tvColor" />

    <Spinner
        android:id="@+id/sType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvType"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvType"
        android:layout_toRightOf="@+id/tvType" />

</RelativeLayout>